--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -18,13 +18,16 @@ body {
     left: 0;
     width: 100%;
     z-index: 100;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    
 }
 .content {
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    margin-top: 20dvh;
+    padding: 2rem;
 }
 
 
