--- a/Frontend/src/Components/Login/Login&SignUp.css
+++ b/Frontend/src/Components/Login/Login&SignUp.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 30%;
+    margin-top: -20dvh;
     align-items: center;
     min-height: 50vh;
 }
