--- a/Frontend/src/Components/JobCard/JobCard.css
+++ b/Frontend/src/Components/JobCard/JobCard.css
@@ -1,12 +1,26 @@
-/* .jobcard{
+.jobcard{
+    text-align: center;
     box-shadow: 0px 4px 16px 0px;
     width: 40dvw;
     border-radius: 8px;
     padding: 4px 16px;
+    color: black;
+    
 }
 
 .jobcard:hover{
     box-shadow: 0px 8px 32px 0px;
     border-radius: 8px;
     padding: 4px 16px;
-} */
+}
+
+.jobCardImg {
+    width: 20px; /* Adjust size as needed */
+    height: auto;
+    margin-right: 1rem; /* Space between logo and text */
+}
+
+.jobCardLine {
+    display: flex; /* This aligns the items horizontally */
+    align-items: center; /* Vertically centers the items */
+}
