--- a/Frontend/src/Components/JobOffer/JobOffer.css
+++ b/Frontend/src/Components/JobOffer/JobOffer.css
@@ -1,8 +1,17 @@
 .jobContainer{
-    box-shadow: 0px 4px 16px 0px;
-    width: 60dvw;
-    height: 70dvh;
-    border-radius: 10px;
-    padding: 4px 16px;
-    overflow: scroll;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70dvw;
+    height: 70dvh;    
+    flex-direction: column;  
+    /* padding: 4px 16px; */
+    /* overflow: scroll; */
+}
+
+.jobCardButton{
+    background-image: url('/factory1.png');
+    background-size: cover; /* Make sure the whole image is visible */
+    background-position: center;
+    background-repeat: no-repeat;
 }
